# mm

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: edge_universe.toml  edge_universe_full.toml  edge_universe_smid.toml  profiles.toml  universe.toml
docs/: DEPLOY.md  agents.md
docs/superpowers/plans/: 2026-06-13-agent-core.md  2026-06-13-agent-temperaments.md  2026-06-13-broker-adapter.md  (+13 more)
scripts/: deploy.sh  preview_telegram.py  provision.sh  run-daily.sh  smoke_agent.py  smoke_edge.py  smoke_ibkr.py  smoke_telegram.py  smoke_yfinance.py
src/trading/: bot.py  config.py  domain.py  run.py
tests/: test_accounts.py  test_actions.py  test_agent_core.py  test_agent_prompts.py  test_agent_schema.py  test_bot.py  test_briefing.py  test_broker_types.py  test_checks.py  test_config.py  test_cycle.py  test_cycle_with_panel.py  test_daily.py  test_db.py  test_domain.py  test_edge_benchmarks.py  test_edge_events.py  test_edge_metrics_calibration.py  test_edge_metrics_ic.py  test_edge_metrics_longshort.py  test_edge_pead_av_prices.py  test_edge_pead_build.py  test_edge_pead_costs.py  test_edge_pead_portfolio.py  test_edge_pead_realize_multi.py  test_edge_pead_report.py  test_edge_pead_run_study.py  test_edge_pead_series.py  test_edge_pead_sue.py  test_edge_pead_sweep.py  test_edge_predict.py  test_edge_prompts.py  test_edge_realize.py  test_edge_report.py  test_edge_run.py  test_edge_schema.py  test_edge_sources.py  test_edge_sources_av.py  test_edge_store.py  test_engine.py  (+25 more)
(+61 files in other folders)
